DOM-events class-2

--- a/class-1 DOM-fundamentals/innertag-dom2.html
+++ b/class-1 DOM-fundamentals/innertag-dom2.html
@@ -46,7 +46,7 @@
 
         let div4 = document.createElement('div')
         div4.innerText = "hiii"
-        // !!!!!! >> we can create style here in js using style property >> !!!!!!!
+        // !!!!!! >> we can create style here in js using style property << !!!!!!!
         div4.style.backgroundColor = "olive" //when there is 2 word second word should start with caps, like we have in background-color, font-size in css
         div4.style.width = "50%"
         div4.style.margin = "10%"
@@ -62,6 +62,10 @@
         document.body.append(div2) //since it is inside the body we use body
         div2.append(div3) //it is inside the div2 not the body so v use only append
         div3.append(div4, heading)
+
+        //we have appendChild() >> only appends one child, whereas append() method append n no of. child
+        //div3.appendChild(div4, heading) >> only gives div4 not heading
+        //div3.appendChild(heading)
 
 
 
