class-3 async,promise,await,callback,callback-hell

--- a/class-1 DOM-fundamentals/dom.html
+++ b/class-1 DOM-fundamentals/dom.html
@@ -9,7 +9,7 @@
 
 <body>
     <!--Hello wolrd using HTML-->
-    <h1>hello world fron HTML</h1>
+    <h1>hello world from HTML</h1>
     <!--Hello world using JS >> in the body place in the document-->
 
     <!--document methods-->
