--- a/class-2 DOM-events/prompt.html
+++ b/class-2 DOM-events/prompt.html
@@ -10,7 +10,7 @@
 <body>
     <h4>prompt box</h4>
     <script>
-        //even promp gives ok cancell
+        //even prompt gives ok cancel
         // in case ok it gives value in case cancel it gives null
 
         let a = prompt("enter your name...")
